cambio de links en inscripciones

--- a/html/inscripciones.html
+++ b/html/inscripciones.html
@@ -47,10 +47,10 @@
                 <button class="close-btn" id="closeMobileMenu" aria-label="Cerrar menú">
                     <i class="fas fa-times"></i>
                 </button>
-                <a href="#inicio" class="menu-btn" data-section="inicio">Inicio</a>
-                <a href="html/autoridades.html" class="menu-btn" data-section="autoridades">Autoridades</a>
-                <a href="html/especialidades.html" class="menu-btn" data-section="especialidades">Especialidades</a>
-                <a href="html/inscripciones.html" class="menu-btn inscripciones-btn" data-section="inscripciones">Inscripciones 2026</a>
+                <a href="../index.html" class="menu-btn" data-section="inicio">Inicio</a>
+                <a href="autoridades.html" class="menu-btn" data-section="autoridades">Autoridades</a>
+                <a href="especialidades.html" class="menu-btn" data-section="especialidades">Especialidades</a>
+                <a href="inscripciones.html" class="menu-btn inscripciones-btn" data-section="inscripciones">Inscripciones 2026</a>
                 <div class="mobile-social">
                     <a href="#" class="social-link">
                         <i class="fab fa-facebook-f"></i>
@@ -71,16 +71,16 @@
 
             <!-- Menú principal -->
             <nav class="main-menu">
-                <a href="#inicio" class="menu-btn" data-section="inicio">
+                <a href="../index.html" class="menu-btn" data-section="inicio">
                     <span>Inicio</span>
                 </a>
-                <a href="html/autoridades.html" class="menu-btn" data-section="autoridades">
+                <a href="autoridades.html" class="menu-btn" data-section="autoridades">
                     <span>Autoridades</span>
                 </a>
-                <a href="html/especialidades.html" class="menu-btn" data-section="especialidades">
+                <a href="especialidades.html" class="menu-btn" data-section="especialidades">
                     <span>Especialidades</span>
                 </a>
-                <a href="html/inscripciones.html" class="menu-btn inscripciones-btn" data-section="inscripciones">
+                <a href="inscripciones.html" class="menu-btn inscripciones-btn" data-section="inscripciones">
                     <span>Inscripciones 2026</span>
                 </a>
             </nav>
