--- a/html/inscripciones.html
+++ b/html/inscripciones.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inscripciones - Técnica N° 1 de Vicente López</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/inscripciones.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -88,7 +86,7 @@
     </header>
     <main>
         <div class="inscription-container container-fluid">
-            <div class="row h-100 gx-0">
+            <div class="row-60 h-100 gx-0">
                 <div id="main-content" class="col-12 col-lg-7 d-flex align-items-center justify-content-center">
                     <div class="content-wrapper w-100">
                         <!-- Sección: ¿Por qué inscribirse? -->
@@ -114,15 +112,16 @@
                         </div>
 
                         <!-- Sección: Materias -->
-                        <div class="data-container d-none align-items-center justify-content-between flex-column">
+                        <div class="subjects-container data-container d-none align-items-center justify-content-between flex-column">
                             <h2 class="data_header">Materias ciclo básico</h2>
                             <div class="container-fluid d-flex justify-content-between subjects-buttons-container">
                                 <button class="button_subjects btn btn-primary active" data-grade="1">Primer año</button>
                                 <button class="button_subjects btn btn-primary" data-grade="2">Segundo año</button>
                                 <button class="button_subjects btn btn-primary" data-grade="3">Tercer año</button>
                             </div>
+                            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ea impedit dolorum voluptates eos necessitatibus. At consequuntur provident, dignissimos a nesciunt reiciendis magni veritatis laboriosam tenetur, unde optio? Consequuntur, voluptatum?</p> -->
                             <div class="grade_subject row w-100">
-                                <div class="col-12 col-md-6">
+                                <div class="list_container col-12 col-md-6">
                                     <ul class="subjects-list">
                                         <li>Lenguajes Tecnológicos</li>
                                         <li>Procedimientos Técnicos</li>
@@ -132,7 +131,49 @@
                                         <li>Construcción Ciudadanía</li>
                                     </ul>
                                 </div>
-                                <div class="col-12 col-md-6">
+                                <div class="list_container col-12 col-md-6">
+                                    <ul class="subjects-list">
+                                        <li>Educación Artística</li>
+                                        <li>Educación Física</li>
+                                        <li>Inglés</li>
+                                        <li>Matemática</li>
+                                        <li>Prácticas del lenguaje</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="grade_subject d-none row w-100">
+                                <div class="list_container col-12 col-md-6">
+                                    <ul class="subjects-list">
+                                        <li>Lenguajes Tecnológicos</li>
+                                        <li>Procedimientos Técnicos</li>
+                                        <li>Sistemas Tecnológicos</li>
+                                        <li>Ciencias Naturales</li>
+                                        <li>Ciencias Sociales</li>
+                                        <li>Construcción Ciudadanía</li>
+                                    </ul>
+                                </div>
+                                <div class="list_container col-12 col-md-6">
+                                    <ul class="subjects-list">
+                                        <li>Educación Artística</li>
+                                        <li>Educación Física</li>
+                                        <li>Inglés</li>
+                                        <li>Matemática</li>
+                                        <li>Prácticas del lenguaje</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="grade_subject d-none row w-100">
+                                <div class="list_container col-12 col-md-6">
+                                    <ul class="subjects-list">
+                                        <li>Lenguajes Tecnológicos</li>
+                                        <li>Procedimientos Técnicos</li>
+                                        <li>Sistemas Tecnológicos</li>
+                                        <li>Ciencias Naturales</li>
+                                        <li>Ciencias Sociales</li>
+                                        <li>Construcción Ciudadanía</li>
+                                    </ul>
+                                </div>
+                                <div class="list_container col-12 col-md-6">
                                     <ul class="subjects-list">
                                         <li>Educación Artística</li>
                                         <li>Educación Física</li>
