Responsive de inscripciones (espero que no me flate nada)

--- a/html/inscripciones.html
+++ b/html/inscripciones.html
@@ -34,7 +34,7 @@
                     </a>
                 </div>
             </div>
-            <!-- Botón hamburguesa (solo visible en mobile) -->
+            <!-- Botón hamburguesa (solo visible en mobile)) -->
             <button class="hamburger" id="hamburgerBtn" aria-label="Abrir menú">
                 <span></span>
                 <span></span>
