--- a/html/inscripciones.html
+++ b/html/inscripciones.html
@@ -132,7 +132,7 @@
                                     </ul>
                                 </div>
                                 <div class="list_container col-12 col-md-6">
-                                    <ul class="subjects-list">
+                                    <ul class="subjects-list ag">
                                         <li>Educación Artística</li>
                                         <li>Educación Física</li>
                                         <li>Inglés</li>
