--- a/prueba/index.html
+++ b/prueba/index.html
@@ -1,39 +1,22 @@
 <!doctype html>
-<html lang="es">
+<!--[if lte IE 9]>
+<html lang="en" class="oldie">
+<![endif]-->
+<!--[if gt IE 9]><!-->
+<html lang="en">
+<!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Fondo Institucional Elegante</title>
+  <title>Sliding Diagonals Background Effect</title>
   <link rel="stylesheet" media="all" href="style.css" />
 </head>
 <body>
-    <div class="context">
-        <h1>Excelencia Educativa</h1>
-        <p>Un diseño profesional y elegante que transmite confianza, modernidad y compromiso con la calidad educativa institucional.</p>
-    </div>
-
-    <div class="area">
-        
-        <!-- Líneas onduladas que cruzan la pantalla -->
-        <div class="wave-lines">
-            <div class="wave-line"></div>
-            <div class="wave-line"></div>
-            <div class="wave-line"></div>
-            <div class="wave-line"></div>
-            <div class="wave-line"></div>
-            <div class="wave-line"></div>
-        </div>
-        
-        <!-- Partículas flotantes minimalistas -->
-        <div class="floating-particles">
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-        </div>
-    </div>
+<div class="bg"></div>
+<div class="bg bg2"></div>
+<div class="bg bg3"></div>
+<div class="content">
+  <h1>Sliding Diagonals Background Effect</h1>
+</div>
 </body>
 </html>
